--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Equation Slides",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Insert equations in Google Slides",
   "background": {
     "matches": ["<all_urls>"],
@@ -8,6 +8,7 @@
     "scripts": ["background.js"],
     "persistent": false
   },
+  "options_page": "options.html",
   "permissions": ["declarativeContent", "activeTab", "storage"],
   "manifest_version": 2,
   "page_action": {
