Add version key to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "equation-slides",
   "description": "Equation Slides package for scripts",
+  "version": "1.2",
   "scripts": {
     "build": "bash package.sh",
     "dev": "bash package.sh --no-zip",
